logo alignment fix on mobile - 2

--- a/setup/style/style.css
+++ b/setup/style/style.css
@@ -105,7 +105,7 @@ header {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  padding: 0.5rem !important;
+  padding: 0rem !important;
   margin:0rem !important;
   height: 5rem !important;
   max-height: 5rem !important;
@@ -115,7 +115,7 @@ header {
 /* 📱 Mobile Navbar */
 .st-key-navbar-mobile-container .stHorizontalBlock {
   flex-flow:nowrap !important;
-  padding: 0.5rem !important;
+  padding: 0rem !important;
   margin:0rem !important;
   height: 5rem !important;
   max-height: 5rem !important;
